Sema: Check AnyObject constraint on associated type witnesses

Fixes <https://bugs.swift.org/browse/SR-6109>, <rdar://problem/34911213>.